# sketch-sh

./: .dockerignore  .env.example  .gitattributes  .gitignore  .nowignore  .travis.yml  0.dd37874ad53e3723b51a.js  1.9a067727f5893906b96a.js  1.aeedc750f812a9099b49.css  10.3bd18c96456a74bc5a5e.js  10.9e7adc59329f9d3ac2f9.js  11.bbc07d55a061961a73b5.js  12.22808dc4d7971b66ad7b.js  12.229258e1f9f61c8e1558.css  12.57e57611d34735e7dbec.js  2.0c43bcbdf005221ce79d.css  2.6dc59f5ac445201bc526.js  3.b82a5f2f7c4de2356f60.css  404.html  6.1a63fa33dc234488f3e0.css  8.7773556b9863c95045be.css  9.83920763d72f06c8d7fe.css  CHANGELOG.md  DEVELOPING.md  Dockerfile  Home.09ab6809feeed6251ea7.js  Home.31b5bd5e331cf1d3dfca.js  Home~User.9c613aeac9dcc936c2d7.js  Home~User.e34760270dce65dbd5ab.js  Makefile  Note.01c3a5bfe7507389ba31.js  Note.77d93c4383591fbc957a.js  NoteNew.43b572c12b0951ef3e6f.js  NoteTemplateChoose.49c17b4d47e2b960359d.js  NoteTemplateChoose.edac555f0d7ab9ea93d8.js  Note~NoteNew.1243aa731ccbcfa1929c.js  Note~NoteNew.e1cc4b895b55788d376d.js  Procfile  Procfile.server  README.md  (+29 more)
client/: .dockerignore  .gitignore  Dockerfile  Makefile  TODO.md  bsconfig.json  cypress.json  dune-project  embedApp.js  entry.js  esy.json  graphql_schema.json  nginx.dev.conf  nginx.prod.conf  package-lock.json  package.json  set-bsconfig-production.js  sketch-client.opam  sketch-client.opam.template  webpack.config.js
client/dep_bundler/: .gitignore  bundle_rr.js  serialize_binary.js
client/public/: berror.js  embed.js  jsootop.cmis.js  test_embed.html
client/shared/: ButterToast.re  Fi.re  Helmet.re  Jwt.re  LzString.re  Modules.re  Mousetrap.re  NanoId.re  PromiseCancelable.re  PromiseCancelable2.re  React.re  ReactContentLoader.re  ReactOld.re  URLSearchParams.re  URLSearchParams.rei  Utils.re
client/src/: Analyzer.re  Analyzer.rei  ApolloClient.re  App.css  App.re  Async.re  Auth.re  AuthStatus.re  Config.re  FFetch.re  FFetch_decode.re  GqlClient.re  Home.css  Home.re  HomeLazy.re  Intro.re  Log.re  Logout.re  NotFound.css  NotFound.re  Note.re  NoteLazy.re  NoteNew.re  NoteNewLazy.re  NoteSave.re  NoteSave_Anonymous.re  NoteSave_Login.re  NoteSave_Types.re  NoteTemplateChoose.css  NoteTemplateChoose.re  Note_New.re  Popup.re  Route.re  Router.re  Router.rei  SStdlib.re  Shortcut.re  Terminal_Content.re  Types.re  User.css  (+8 more)
client/src_analyzer/: Worker_Analyze.re  Worker_Binding.re  Worker_BrowserEvaluator.re  Worker_Evaluator.re  Worker_Index.re  Worker_Location_Utils.re  Worker_NodeEvaluator.re  Worker_ParseLocation.re  Worker_Refmt.re  Worker_Types.re
client/src_editor/: App.re  Auth.re  CodeMirror.re  CodeMirror_Links.re  CompilerVersion.re  Editor_Blocks.css  Editor_Blocks.re  Editor_Blocks.rei  Editor_Blocks_Refmt.re  Editor_Blocks_Utils.re  Editor_CodeBlock.re  Editor_CodeBlockLineWidget.re  Editor_CodeBlockTypes.re  Editor_CodeMirror.re  Editor_Entry.re  Editor_Introduction.re  Editor_Json.re  Editor_Json.rei  Editor_LineWidget.css  Editor_LineWidget.re  Editor_LineWidget.rei  Editor_Links.css  Editor_Links.re  Editor_Links_Utils.re  Editor_Loremipsum.re  Editor_Note.css  Editor_Note.re  Editor_NoteOwnerInfo.css  Editor_NoteOwnerInfo.re  Editor_NotePlaceholder.re  Editor_Note_ForkButton.re  Editor_Note_GetUserInfo.re  Editor_Note_Loader.re  Editor_Note_LoaderLazy.re  NanoId.re  (+15 more)
(+496 files in other folders)
