(library
  (name Repl)
  (flags (:standard -w -27-26))
  (modes byte)
  (public_name sketch.repl)
  (libraries 
    console.lib
    compiler-libs.common 
    compiler-libs.toplevel 
    reason
    unix
    sketch.util
    sketch.read_stdout
  )
  (preprocess 
    (pps ppx_deriving.show)
  )
  (modules Location_util Reason_util Report State SyntaxControl Types Execute)
  (private_modules Location_util Reason_util Report)
)
